# examples-stm32

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: stm32.cmake  utils.cmake
examples/gpio/: CMakeLists.txt
examples/gpio/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
examples/gpio/Src/: main.c  stm32f1xx_it.c  system_stm32f1xx.c
examples/spi/: CMakeLists.txt
examples/spi/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
examples/spi/Src/: main.c  main.cpp  stm32f1xx_hal_msp.c  stm32f1xx_it.c
examples/uart/: CMakeLists.txt
examples/uart/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
examples/uart/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  system_stm32f1xx.c
stm32-hal/: CMakeLists.txt
toolchain/: clang.cmake  gcc.cmake
